Made some changes to ChiliPeppr widget using Cloud9

--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -318,6 +318,9 @@ cpdefine("inline:com-chilipeppr-widget-template", ["chilipeppr_ready", /* other 
                 this.options.showBody = true;
                 this.saveOptionsLocalStorage();
             }
+            // this will send an artificial event letting other widgets know to resize
+            // themselves since this widget is now taking up more room since it's showing
+            $(window).trigger("resize");
         },
         /**
          * Hide the body of the panel.
@@ -336,6 +339,9 @@ cpdefine("inline:com-chilipeppr-widget-template", ["chilipeppr_ready", /* other 
                 this.options.showBody = false;
                 this.saveOptionsLocalStorage();
             }
+            // this will send an artificial event letting other widgets know to resize
+            // themselves since this widget is now taking up less room since it's hiding
+            $(window).trigger("resize");
         },
         /**
          * This method loads the pubsubviewer widget which attaches to our 
